8170358: [REDO] 8k class metaspace chunks misallocated from 4k chunk Freelist

Reviewed-by: dholmes, kevinw